# MDHP-Net-Anonymous

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: loggers.yml  mdhp-gds_speed-test.yml
configs/test/: mdhp-net.yml  sissa-cnn.yml  sissa-lstm.yml  sissa-rnn.yml
configs/train/: mdhp-net.yml  sissa-cnn.yml  sissa-lstm.yml  sissa-rnn.yml
configs/visualization/: n_seq_comp.yml  train_mdhp-net_vs_sissa-cnn.yml  train_mdhp-net_vs_sissa-lstm.yml  train_mdhp-net_vs_sissa-rnn.yml
examples/: MDHP-GDS.ipynb
mdhpnet/: __init__.py
mdhpnet/archs/: __init__.py  common.py  mdhp_lstm.py
mdhpnet/datasets/: __init__.py  some_ip_dataset.py  some_ip_mdhp_dataset.py
mdhpnet/losses/: common.py
mdhpnet/models/: __init__.py  mdhp_gds.py  mdhp_net.py  sissa_cnn.py  sissa_lstm.py  sissa_rnn.py
mdhpnet/utils/: __init__.py  factory.py  math.py  mdhp_solver.py  simple_logger.py  test_pipelines.py  train_pipelines.py
scripts/: make_data.py  mdhp-gds_speed-test.py  model_dist_train.py  model_dist_train.sh  model_test.py
scripts/figures_and_statistics/: mdhp-gds_cdf-2d.py  mdhp-gds_cdf-3d.py  models_confusion-matrix.py  models_n-seq-comparison.py  models_print-statistics.py  models_roc-auc.py  models_statistics_bar_chart.py  models_train-val-acc-loss.py
